Feat - Create Library using Nx (scaffold) Feat - Create Directive using Nx (scaffold)

--- a/nx.json
+++ b/nx.json
@@ -7,5 +7,9 @@
     "tslint.json": "*",
     "nx.json": "*"
   },
-  "projects": {}
+  "projects": {
+    "ng2-throttle-click": {
+      "tags": []
+    }
+  }
 }
