--- a/angular.json
+++ b/angular.json
@@ -2,13 +2,42 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "",
-  "projects": {},
+  "projects": {
+    "ng2-throttle-click": {
+      "root": "libs/ng2-throttle-click",
+      "sourceRoot": "libs/ng2-throttle-click/src",
+      "projectType": "library",
+      "prefix": "ng2throttleClick",
+      "architect": {
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "libs/ng2-throttle-click/src/test.ts",
+            "tsConfig": "libs/ng2-throttle-click/tsconfig.spec.json",
+            "karmaConfig": "libs/ng2-throttle-click/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/ng2-throttle-click/tsconfig.lib.json",
+              "libs/ng2-throttle-click/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
   "cli": {
     "warnings": {
       "typescriptMismatch": false,
       "versionMismatch": false
     },
     "defaultCollection": "@nrwl/schematics"
-    
-  }
+  },
+  "defaultProject": "ng2-throttle-click"
 }
